# openmls_react_native_poc

./: .gitignore  Cargo.toml  build-android.sh  build-ios.sh
bindings/: module.modulemap
ios/: OpenMLSReactNativePOC.swift
ios/OpenMLSReactNativePOC.xcframework/: Info.plist
ios/OpenMLSReactNativePOC.xcframework/ios-arm64-simulator/Headers/: openmls_react_native_pocFFI.h
openmls_react_native_poc.xcframework/: Info.plist
openmls_react_native_poc.xcframework/ios-arm64/: Headers
src/: helpers.rs  lib.rs  openmls_rust_persistent_crypto.rs  structs.rs
